Snek Projekt elkezdve

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="mozijegy/index.html">Mozijegy</a>
         <a href="stopper/index.html">Stopper</a>
         <a href="szorzotabla/index.html">Szorzótábla</a>
+        <a href="snek/index.html">Snek</a>
     </nav>
 </body>
 </html>
