--- a/snek/index.html
+++ b/snek/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Snek</title>
+    <title>SnakeJS - 1/13.SZFT</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/snake.css">
+
 </head>
+
 <body>
-    <div class="container">
-        <div class="menu">
-            <button id="startbt">
-                >
-            </button>
-            <div id="text">
-                START
-            </div>
-            <ul>
-                <li><button id="easy">Easy</button></li>
-                <li><button id="normal">Normal</button></li>
-                <li><button id="hard">Hard</button></li>
-                <li><button id="extreme">Extreme</button></li>
-            </ul>
-        </div>
-        <div class="gamebg">
-            <div id="gameArr">
-                <div id="score">
-                    <p>score temp</p>
-                </div>
-                <div id="game">
-                </div>
-            </div>
+    <div id="gameBackGround">
+        <div id="gameArea">
+            <div id="results"></div>
+            <div id="gameTable"></div>
         </div>
     </div>
-    <script src="js/app.js"></script>
+    <div id="startPanel">
+        <button id="startBtn">
+            <img src="img/play.png" alt="play">
+        </button>
+        <div id="startText">START</div>
+        <ul>
+            <li><button id="easy">EASY</button></li>
+            <li><button id="medium">MEDIUM</button></li>
+            <li><button id="hard">HARD</button></li>
+            <li><button id="extreme">EXTREME</button></li>
+        </ul>
+    </div>
+    <script src="js/snake.js"></script>
 </body>
+
 </html>
