--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>NSZ Webprog 1. 2022</title>
 </head>
 <body>
+    <header>
+        <h1>JS Feladatok</h1>
+    </header>
     <nav>
         <a href="edzesnaptar/index.html">Edzésnaptár</a>
         <a href="husvet_meghatarozas/index.html">Húsvét</a>
@@ -15,6 +18,7 @@
         <a href="stopper/index.html">Stopper</a>
         <a href="szorzotabla/index.html">Szorzótábla</a>
         <a href="snek/index.html">Snek</a>
+        <a href="tilitoli/index.html">Tilitoli</a>
     </nav>
 </body>
 </html>
