--- a/index.html
+++ b/index.html
@@ -5,20 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NSZ Webprog 1. 2022</title>
+    <style>
+        body{
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        h1{
+            text-align: center;
+        }
+        a{
+            display:block;
+            color:black;
+            text-decoration: none;
+            transition:all 0.05s ease-in;
+        }
+        a:hover{
+            color:white;
+            background-color: slategray;
+            font-size: 110%;
+            text-align: center;
+        }
+        .links{
+            display: flex;
+            flex-flow: column wrap;
+            align-content: center;
+            border: 1px solid black;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
+    <div class="links">
     <header>
         <h1>JS Feladatok</h1>
     </header>
-    <nav>
-        <a href="edzesnaptar/index.html">Edzésnaptár</a>
-        <a href="husvet_meghatarozas/index.html">Húsvét</a>
-        <a href="kockajatek/index.html">Kockajáték</a>
-        <a href="mozijegy/index.html">Mozijegy</a>
-        <a href="stopper/index.html">Stopper</a>
-        <a href="szorzotabla/index.html">Szorzótábla</a>
-        <a href="snek/index.html">Snek</a>
-        <a href="tilitoli/index.html">Tilitoli</a>
-    </nav>
+        <nav>
+            <a href="edzesnaptar/index.html">Edzésnaptár</a>
+            <a href="husvet_meghatarozas/index.html">Húsvét</a>
+            <a href="kockajatek/index.html">Kockajáték</a>
+            <a href="mozijegy/index.html">Mozijegy</a>
+            <a href="stopper/index.html">Stopper</a>
+            <a href="szorzotabla/index.html">Szorzótábla</a>
+            <a href="snek/index.html">Snek</a>
+            <a href="tilitoli/index.html">Tilitoli</a>
+            <a href="cipobolt/index.html">Cipőbolt</a>
+        </nav>
+    </div>
 </body>
 </html>
