--- a/cipobolt/html/2.html
+++ b/cipobolt/html/2.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="dates"></div>
-        <div class="result"></div>
+        <div class="dates2"></div>
+        <div class="result2"></div>
     </div>
-    <a href="html/2.html">2. feladat</a>
-    <a href="html/3.html">3. feladat</a>
-    <a href="html/4.html">4. feladat</a>
-    <script src="js/app.js"></script>
+    <a href="../index.html">1. feladat</a>
+    <a href="3.html">3. feladat</a>
+    <a href="4.html">4. feladat</a>
+    <script src="../js/app2.js"></script>
 </body>
 </html>
