Felesleges .html oldalak törölve linkjavítások

--- a/cipobolt/html/index.html
+++ b/cipobolt/html/index.html
@@ -23,6 +23,11 @@
 <body>
     <div class="data"></div>
     <div class="result"></div>
+    <div class="links">
+        <a href="../index.html">1. Feladat</a>
+        <a href="2.html">2. Feladat</a>
+        <a href="index2.html">4. feladat</a>
+    </div>
     <script src="../js/app3.js"></script>
 </body>
 </html>
