--- a/cipobolt/index.html
+++ b/cipobolt/index.html
@@ -13,8 +13,8 @@
         <div class="result"></div>
     </div>
     <a href="html/2.html">2. feladat</a>
-    <a href="html/3.html">3. feladat</a>
-    <a href="html/4.html">4. feladat</a>
+    <a href="html/index.html">3. feladat</a>
+    <a href="html/index2.html">4. feladat</a>
     <script src="js/app.js"></script>
 </body>
 </html>
