--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             align-content: center;
             border: 1px solid black;
             border-radius: 10px;
+            padding:10px;
         }
     </style>
 </head>
