--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <a href="snek/index.html">Snek</a>
             <a href="tilitoli/index.html">Tilitoli</a>
             <a href="cipobolt/index.html">Cipőbolt</a>
+            <a href="forms/login/index.html">Űrlapok</a>
         </nav>
     </div>
 </body>
