--- a/forms/login/index.html
+++ b/forms/login/index.html
@@ -39,7 +39,8 @@
                     <label for="password" class="form-label">Jelszó még egyszer:*</label>
                 </div>
                 <div class="form-text">A *-al megadott mezők kitöltése kötelező!</div>
-                <button id="regBtn" type="button" class="btn btn-outline-dark"><i class="bi bi-arrow-left-circle-fill"></i> Elküld...</button>
+                <button id="regBtn" type="button" class="btn btn-outline-dark"><i class="bi bi-arrow-right-circle"></i> Elküld...</button>
+                <a href="html/login.html" class="btn btn-outline-dark">Bejelentkezés...</a>
             </form> 
             <footer><p>Készítette: Zick Balázs 2022.</p></footer>
         </div>
