--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a href="tilitoli/index.html">Tilitoli</a>
             <a href="cipobolt/index.html">Cipőbolt</a>
             <a href="forms/login/index.html">Űrlapok</a>
+            <a href="forms/form/index.html">Űrlap 2.</a>
         </nav>
     </div>
 </body>
