--- a/forms/login/html/login.html
+++ b/forms/login/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="../../../addon/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
@@ -31,7 +31,7 @@
             </form>
         </div>
     </div>
-    <script src="../js/bootstrap/bootstrap.bundle.js"></script>
+    <script src="../../../addon/js/bootstrap/bootstrap.bundle.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
