--- a/forms/login/index.html
+++ b/forms/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="../../addon/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="form mb-3">
             <h1>Űrlapok kezelése</h1>
-            <form method="POST" action="regisztracio.html">
+            <form method="POST" action="regisztracio.html" enctype="multipart/form-data">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" name="username" id="username" placeholder="Név">
                     <label for="username" class="form-label">Felhasználó név:*</label>
@@ -45,7 +45,7 @@
             <footer><p>Készítette: Zick Balázs 2022.</p></footer>
         </div>
     </div>
-    <script src="js/bootstrap/bootstrap.bundle.js"></script>
+    <script src="../../addon/js/bootstrap/bootstrap.bundle.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
