--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         <h1>JS Feladatok</h1>
     </header>
         <nav>
-            <a href="edzesnaptar/index.html">Edzésnaptár</a>
-            <a href="husvet_meghatarozas/index.html">Húsvét</a>
-            <a href="kockajatek/index.html">Kockajáték</a>
-            <a href="mozijegy/index.html">Mozijegy</a>
-            <a href="stopper/index.html">Stopper</a>
-            <a href="szorzotabla/index.html">Szorzótábla</a>
-            <a href="snek/index.html">Snek</a>
-            <a href="tilitoli/index.html">Tilitoli</a>
-            <a href="cipobolt/index.html">Cipőbolt</a>
-            <a href="forms/login/index.html">Űrlapok</a>
-            <a href="forms/form/index.html">Űrlap 2.</a>
+            <a href="edzesnaptar/">Edzésnaptár</a>
+            <a href="husvet_meghatarozas/">Húsvét</a>
+            <a href="kockajatek/">Kockajáték</a>
+            <a href="mozijegy/">Mozijegy</a>
+            <a href="stopper/">Stopper</a>
+            <a href="szorzotabla/">Szorzótábla</a>
+            <a href="snek/">Snek</a>
+            <a href="tilitoli/">Tilitoli</a>
+            <a href="cipobolt/">Cipőbolt</a>
+            <a href="forms/login/">Űrlapok</a>
+            <a href="forms/form/">Űrlap 2.</a>
         </nav>
     </div>
 </body>
