Kész játék, bugos a restart még

--- a/memoria_jatek/index.html
+++ b/memoria_jatek/index.html
@@ -33,7 +33,7 @@
                 <button type="button" id="Schtarten" class="my-3 btn btn-outline-success">Start</button>
             </div>
             <div id="Game" class="p-5">
-                <div id="Tiles">
+                <div id="Tiles" class="row">
                 </div>
                 <div class="row">
                     <div class="form-item col-4">
